--- a/wp-content/themes/benzai/style.css
+++ b/wp-content/themes/benzai/style.css
@@ -45,10 +45,8 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 # Normalize
 --------------------------------------------------------------*/
 /* normalize.css v8.0.0 | MIT License | github.com/necolas/normalize.css */
-
 /* Document
 	 ========================================================================== */
-
 /**
  * 1. Correct the line height in all browsers.
  * 2. Prevent adjustments of font size after orientation changes in iOS.
@@ -185,6 +183,10 @@ body {
     color: #00E676;
 }
 
+.arrow_right {
+    display: none;
+}
+
 .nav div.main_list {
     height: 65px;
     float: right;
@@ -201,7 +203,7 @@ body {
 
 .nav div.main_list ul li {
     width: auto;
-    height: 65px;
+    /*height: 65px;*/
     padding: 0;
     padding-right: 3rem;
 }
